# prac

src/: index.html  index2.html  main.js  main2.js  styles.css  styles2.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
