[package]
name = "prac"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
chrono = "0.4.24"
tauri = { version = "1.2", features = ["clipboard-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fernet = "0.2.1"
lazy_static = "1.4.0"
discord-rich-presence = "0.2.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
